tests/ui/binop/eq-vec.stderr
error[E0369]: binary operation `==` cannot be applied to type `Vec<Foo>`
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `assert_eq!`
  ::: $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: Vec<Foo>
   |
   = note: Vec<Foo>
   |
  ::: $DIR/eq-vec.rs:11:5
   |
LL |     assert_eq!(vec1, vec2);
   |     ---------------------- in this macro invocation
   |
note: an implementation of `PartialEq` might be missing for `Foo`
  --> $DIR/eq-vec.rs:3:5
   |
LL |     enum Foo {
   |     ^^^^^^^^ must implement `PartialEq`
help: consider annotating `Foo` with `#[derive(PartialEq)]`
  --> $DIR/eq-vec.rs:3:5
   |
LL +     #[derive(PartialEq)]
LL |     enum Foo {
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
